# basic-curves

./: CMakeLists.txt  CubicCurve.cpp  CubicCurve.h  Curve.h  CurveEffect.cpp  CurveEffect.h  DrawCubicCurve.cpp  DrawCubicCurve.h  DrawCurve.cpp  DrawCurve.h  LinearCurve.cpp  LinearCurve.h  QuadraticCurve.cpp  QuadraticCurve.h  README.md  main.cpp  main_update.cpp
